<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.teuskim.fitproj.MainDataFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <!-- 마지막으로 저장된 몸무게 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            >
            <LinearLayout
                android:id="@+id/last_weight_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                >
                <EditText
                    android:id="@+id/last_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:gravity="center_vertical"
                    android:textSize="34sp"
                    android:textColor="#ffffff"
                    android:text="0.0"
                    />
                <TextView
                    android:id="@+id/last_weight_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="34sp"
                    android:textColor="#ffffff"
                    android:text="kg"
                    />
            </LinearLayout>
            <FrameLayout
                android:id="@+id/btn_modify_wrapper"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_toRightOf="@id/last_weight_wrapper"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/common_save"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:background="#57e2ff"
                    />
                <View
                    android:id="@+id/btn_modify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_goal_item"
                    />
            </FrameLayout>
        </RelativeLayout>

        <!-- 마지막으로 저장한 날짜 -->
        <TextView
            android:id="@+id/last_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="#c5cbd3"
            />

        <!-- 그래프 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            >
            <com.teuskim.fitproj.view.HorizontalListView
                android:id="@+id/weight_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <ImageView
                android:id="@+id/enter_weight_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_weight"
                android:visibility="gone"
                />
        </RelativeLayout>

        <!-- 구분선 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#64758a"
            />

        <!-- 활동 감지 스위치 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:text="@string/recording"
                />
            <Switch
                android:id="@+id/switch_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/on"
                android:textOff="@string/off"
                />
        </LinearLayout>

        <!-- 구분선 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#64758a"
            />

        <!-- 알람 스위치 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:text="@string/alert"
                />
            <Switch
                android:id="@+id/switch_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/on"
                android:textOff="@string/off"
                />
        </LinearLayout>

        <!-- 구분선 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#64758a"
            />

        <!-- 단위변환 스위치 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:text="@string/convert_unit"
                />
            <Switch
                android:id="@+id/switch_convert_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/on"
                android:textOff="@string/off"
                />
        </LinearLayout>

        <!-- 구분선 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#64758a"
            />

    </LinearLayout>
</ScrollView>
